<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/measure_bg"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="1dp"
        android:paddingRight="1dp"
        android:gravity="center"
        android:background="@drawable/sddman_shadow_bg">
        <LinearLayout
            android:id="@+id/measure_prev_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/zoom_button_topcorner">
            <ImageView
                android:id="@+id/measure_prev"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_measure_prev"/>
            <TextView
                android:id="@+id/measure_prev_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_prev_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>
        <TextView
            android:id="@+id/spilt_line0"
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:background="#c5c5c5" />
        <LinearLayout
            android:id="@+id/measure_next_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/zoom_button_topcorner">
            <ImageView
                android:id="@+id/measure_next"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_measure_next"/>
            <TextView
                android:id="@+id/measure_next_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_next_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>
        <TextView
            android:id="@+id/spilt_line1"
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:background="#c5c5c5" />
        <LinearLayout
            android:id="@+id/measure_length_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/measure_length"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_measure_length"/>
            <TextView
                android:id="@+id/measure_length_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_length_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>
        <TextView
            android:id="@+id/spilt_line2"
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:background="#c5c5c5"/>
        <LinearLayout
            android:id="@+id/measure_area_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/measure_area"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_measure_area"/>
            <TextView
                android:id="@+id/measure_area_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_area_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>
        <TextView
            android:id="@+id/spilt_line3"
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:background="#c5c5c5"/>
        <LinearLayout
            android:id="@+id/measure_clear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/zoom_button_topcorner">
            <ImageView
                android:id="@+id/measure_clear"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_measure_clear"/>
            <TextView
                android:id="@+id/measure_clear_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_clear_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>
        <TextView
            android:id="@+id/spilt_line4"
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:background="#c5c5c5"/>

        <LinearLayout
            android:id="@+id/measure_end_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/zoom_button_topcorner">
            <ImageView
                android:id="@+id/measure_end"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_measure_end"/>
            <TextView
                android:id="@+id/measure_end_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_end_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>