<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/drawing_bg"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="1dp"
        android:paddingRight="1dp"
        android:gravity="center"
        android:background="@drawable/sddman_shadow_bg">
        <LinearLayout
            android:id="@+id/drawing_line_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/zoom_button_topcorner"
            android:visibility="gone">
            <ImageView
                android:id="@+id/drawing_line"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_drawing_line"/>
            <TextView
                android:id="@+id/drawing_line_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawing_line_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>
        <TextView
            android:id="@+id/spilt_line0"
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:background="#c5c5c5"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/drawing_polygon_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/zoom_button_topcorner"
            android:visibility="gone">
            <ImageView
                android:id="@+id/drawing_polygon"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_drawing_polygon"/>
            <TextView
                android:id="@+id/drawing_polygon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawing_polygon_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>
        <TextView
            android:id="@+id/spilt_line1"
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:background="#c5c5c5"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/drawing_orthogon_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/drawing_orthogon"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_drawing_orthogon"/>
            <TextView
                android:id="@+id/drawing_orthogon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawing_orthogon_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>
        <TextView
            android:id="@+id/spilt_line2"
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:background="#c5c5c5"/>
        <LinearLayout
            android:id="@+id/drawing_circle_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/drawing_circle"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_drawing_circle"/>
            <TextView
                android:id="@+id/drawing_circle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawing_circle_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>
        <TextView
            android:id="@+id/spilt_line3"
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:background="#c5c5c5"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/drawing_ellipse_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/zoom_button_topcorner"
            android:visibility="gone">
            <ImageView
                android:id="@+id/drawing_ellipse"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_drawing_ellipse"/>
            <TextView
                android:id="@+id/drawing_ellipse_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawing_ellipse_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>
        <TextView
            android:id="@+id/spilt_line4"
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:background="#c5c5c5"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/drawing_rhombus_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/zoom_button_topcorner"
            android:visibility="gone">
            <ImageView
                android:id="@+id/drawing_rhombus"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_drawing_rhombus"/>
            <TextView
                android:id="@+id/drawing_rhombus_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawing_rhombus_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>
        <TextView
            android:id="@+id/spilt_line5"
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:background="#c5c5c5"/>
        <LinearLayout
            android:id="@+id/drawing_clear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/zoom_button_topcorner">
            <ImageView
                android:id="@+id/measure_clear"
                android:layout_width="@dimen/zoom_btn_size"
                android:layout_height="@dimen/zoom_btn_size"
                android:padding="@dimen/zoom_btn_padding"
                android:src="@drawable/sddman_measure_clear"/>
            <TextView
                android:id="@+id/clear_draw_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_clear_text"
                android:textSize="@dimen/zoom_font_size"
                android:paddingBottom="@dimen/zoom_btn_padding"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>